--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,6 +2,7 @@
   "lock": false,
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.224.0",
-    "@std/async": "jsr:@std/async@^0.224.0"
+    "@std/async": "jsr:@std/async@^0.224.0",
+    "@std/caching": "./mod.ts"
   }
 }
