--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,15 @@
 {
   "lock": false,
+  "tasks": {
+    "test": "deno test -A --watch --doc",
+    "docs": "deno doc --html --name='Memoize' ./src && touch ./docs/.nojekyll"
+  },
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.224.0",
     "@std/async": "jsr:@std/async@^0.224.0",
-    "@std/caching": "./mod.ts"
+    "@std/caching": "./src/mod.ts"
+  },
+  "fmt": {
+    "exclude": ["docs"]
   }
 }
