--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,13 +1,16 @@
 {
   "lock": false,
   "tasks": {
-    "test": "deno test -A --watch --doc",
-    "docs": "deno doc --html --name='Memoize' ./src && touch ./docs/.nojekyll"
+    "test": "deno test -A --watch --doc ./src",
+    "docs": "deno run -A --watch ./scripts/build_docs.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.224.0",
     "@std/async": "jsr:@std/async@^0.224.0",
-    "@std/caching": "./src/mod.ts"
+    "@std/caching": "./src/mod.ts",
+    "@std/fs": "jsr:@std/fs@^0.224.0",
+    "@std/path": "jsr:@std/path@^0.224.0",
+    "cheerio": "https://esm.sh/v131/cheerio@1.0.0-rc.12"
   },
   "fmt": {
     "exclude": ["docs"]
